syntax = "proto3";

package empty;

option go_package = "../pb";

message EmptyRequest {
}

message EmptyReply {
}